Fix examples width being too wide
By introducing an application specific width container we make sure the examples within the Design System are the default width.

This commit also tidies up some unused class names.

Fixes https://github.com/alphagov/govuk-design-system/issues/798

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,5 +1,3 @@
-$govuk-page-width: 1100px !default;
-
 @import "govuk-frontend/govuk/all";
 
 // App-specific variables
@@ -30,6 +28,11 @@ $app-code-color: #d13118;
 
 body {
   margin: 0;
+}
+
+// We don't change the global width container width so that examples are the current width.
+.app-width-container {
+  @include govuk-width-container(1100px);
 }
 
 .app-hide-mobile {
